# wg21-agora21

./: .env.example  .gitignore  README.md  pyproject.toml  reddit-design.md  requirements.txt  the-mod.md
.github/workflows/: notify-superproject-vendor-pin.yml
prompts/: reddit.md
schemas/: index-manifest-v1.schema.json  thread-v1.0.0.schema.json
src/agora21/: __init__.py  __main__.py  claude_stream.py  cli.py  config.py  credentials.py  defaults.yaml  fetcher.py  git_sandbox.py  loop.py  parallel_generate.py  paths.py  revision.py  validate.py
src/agora21/ingest/: __init__.py  fetcher.py
src/agora21/support/: __init__.py  config.py
tests/: conftest.py  test_agora21_main.py  test_claude_stream.py  test_cli_run_papers_json.py  test_credentials.py  test_fetcher_mailing_table.py  test_git_sandbox.py  test_loop_disk_recovery.py  test_parallel_generate.py  test_paths.py  test_validate.py
tests/fixtures/: mailing-2026-02.json  thread-minimal.json
